# rust-wasm-example-rsa

./: README.md
flutter-app/: README.md  pubspec.yaml
flutter-app/lib/: main.dart
flutter-app/lib/ui/: app.dart
flutter-app/lib/ui/screens/home/: home_page.dart
flutter-app/lib/wasm/: bindings.dart
flutter-app/test/: widget_test.dart
flutter-app/web/: index.html  manifest.json
flutter-app/web/pkg/: rust_crypto_module.js  rust_crypto_module_bg.wasm
rust-crypto-module/: Cargo.toml  LICENSE_MIT
rust-crypto-module/src/: lib.rs
