[package]
name = "rust-crypto-module"
version = "0.1.0"
authors = ["Gonçalo Palma <solid.goncalo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
rsa = "0.5.0"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "=0.2.73"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--no-validation"]

[profile.release]
opt-level = "s"
lto = true
